fixed urls in swagger
